// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feed generation does not embed taken-down feed generator records in posts 1`] = `
Object {
  "author": Object {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "did": "user(0)",
    "displayName": "bobby",
    "handle": "bob.test",
    "labels": Array [
      Object {
        "cid": "cids(1)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-a",
      },
      Object {
        "cid": "cids(1)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-b",
      },
    ],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  "cid": "cids(0)",
  "embed": Object {
    "$type": "app.bsky.embed.record#view",
    "record": Object {
      "$type": "app.bsky.embed.record#viewNotFound",
      "notFound": true,
      "uri": "record(2)",
    },
  },
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "likeCount": 0,
  "record": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "embed": Object {
      "$type": "app.bsky.embed.record",
      "record": Object {
        "cid": "cids(2)",
        "uri": "record(2)",
      },
    },
    "text": "weird feed",
  },
  "replyCount": 0,
  "repostCount": 0,
  "uri": "record(0)",
  "viewer": Object {},
}
`;

exports[`feed generation embeds feed generator records in posts 1`] = `
Object {
  "author": Object {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "did": "user(0)",
    "displayName": "bobby",
    "handle": "bob.test",
    "labels": Array [
      Object {
        "cid": "cids(1)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-a",
      },
      Object {
        "cid": "cids(1)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-b",
      },
    ],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  "cid": "cids(0)",
  "embed": Object {
    "$type": "app.bsky.embed.record#view",
    "record": Object {
      "$type": "app.bsky.feed.defs#generatorView",
      "cid": "cids(2)",
      "creator": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(2)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": Array [
          Object {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "user(2)",
            "uri": "record(5)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "user(2)",
            "uri": "record(5)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(4)",
          "following": "record(3)",
          "muted": false,
        },
      },
      "description": "Provides all feed candidates",
      "did": "user(1)",
      "displayName": "All",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 2,
      "uri": "record(2)",
      "viewer": Object {
        "like": "record(6)",
      },
    },
  },
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "likeCount": 0,
  "record": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "embed": Object {
      "$type": "app.bsky.embed.record",
      "record": Object {
        "cid": "cids(2)",
        "uri": "record(2)",
      },
    },
    "text": "cool feed!",
  },
  "replyCount": 0,
  "repostCount": 0,
  "uri": "record(0)",
  "viewer": Object {},
}
`;

exports[`feed generation getActorFeeds fetches feed generators by actor. 1`] = `
Array [
  Object {
    "cid": "cids(0)",
    "creator": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "its me!",
      "did": "user(1)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [
        Object {
          "cid": "cids(1)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        Object {
          "cid": "cids(1)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": Object {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "description": "Provides odd-indexed feed candidates",
    "did": "user(0)",
    "displayName": "Odd",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "uri": "record(0)",
    "viewer": Object {},
  },
  Object {
    "cid": "cids(2)",
    "creator": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "its me!",
      "did": "user(1)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [
        Object {
          "cid": "cids(1)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        Object {
          "cid": "cids(1)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": Object {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "description": "Provides all feed candidates, blindly ignoring pagination limit",
    "did": "user(0)",
    "displayName": "Bad Pagination",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "uri": "record(4)",
    "viewer": Object {},
  },
  Object {
    "cid": "cids(3)",
    "creator": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "its me!",
      "did": "user(1)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [
        Object {
          "cid": "cids(1)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        Object {
          "cid": "cids(1)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": Object {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "description": "Provides even-indexed feed candidates",
    "did": "user(0)",
    "displayName": "Even",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "uri": "record(5)",
    "viewer": Object {},
  },
  Object {
    "cid": "cids(4)",
    "creator": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "description": "its me!",
      "did": "user(1)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [
        Object {
          "cid": "cids(1)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        Object {
          "cid": "cids(1)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": Object {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "description": "Provides all feed candidates",
    "did": "user(0)",
    "displayName": "All",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 2,
    "uri": "record(6)",
    "viewer": Object {
      "like": "record(7)",
    },
  },
]
`;

exports[`feed generation getFeed paginates, handling replies and reposts. 1`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": Array [
          Object {
            "cid": "cids(1)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(1)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [
        Object {
          "cid": "cids(0)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "user(0)",
          "uri": "record(0)",
          "val": "self-label",
        },
      ],
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "labels": Object {
          "$type": "com.atproto.label.defs#selfLabels",
          "values": Array [
            Object {
              "val": "self-label",
            },
          ],
        },
        "text": "hey there",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(1)",
        "displayName": "bobby",
        "handle": "bob.test",
        "labels": Array [
          Object {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "user(1)",
            "uri": "record(5)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "user(1)",
            "uri": "record(5)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(4)",
          "following": "record(3)",
          "muted": false,
        },
      },
      "cid": "cids(2)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "langs": Array [
          "en-US",
          "i-klingon",
        ],
        "text": "bob back at it again!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(2)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "did": "user(2)",
        "handle": "carol.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(8)",
          "following": "record(7)",
          "muted": false,
        },
      },
      "cid": "cids(4)",
      "embed": Object {
        "$type": "app.bsky.embed.recordWithMedia#view",
        "media": Object {
          "$type": "app.bsky.embed.images#view",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
            Object {
              "alt": "tests/image/fixtures/key-alt.jpg",
              "fullsize": "https://pds.public.url/image/xC2No-8rKVDIwIMmCiEBm9EiGLDBBOpf36PHoGf-GDw/rs:fit:2000:2000:1:0/plain/bafkreifdklbbcdsyanjz3oqe5pf2omuq5ansthokxlbleagg3eenx62h7e@jpeg",
              "thumb": "https://pds.public.url/image/g7yazUpNwN8LKumZ2Zmn_ptQbtMLs1Pti5-GDn7H8_8/rs:fit:1000:1000:1:0/plain/bafkreifdklbbcdsyanjz3oqe5pf2omuq5ansthokxlbleagg3eenx62h7e@jpeg",
            },
          ],
        },
        "record": Object {
          "record": Object {
            "$type": "app.bsky.embed.record#viewRecord",
            "author": Object {
              "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
              "did": "user(1)",
              "displayName": "bobby",
              "handle": "bob.test",
              "labels": Array [
                Object {
                  "cid": "cids(3)",
                  "cts": "1970-01-01T00:00:00.000Z",
                  "neg": false,
                  "src": "user(1)",
                  "uri": "record(5)",
                  "val": "self-label-a",
                },
                Object {
                  "cid": "cids(3)",
                  "cts": "1970-01-01T00:00:00.000Z",
                  "neg": false,
                  "src": "user(1)",
                  "uri": "record(5)",
                  "val": "self-label-b",
                },
              ],
              "viewer": Object {
                "blockedBy": false,
                "followedBy": "record(4)",
                "following": "record(3)",
                "muted": false,
              },
            },
            "cid": "cids(2)",
            "embeds": Array [],
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": Array [],
            "uri": "record(2)",
            "value": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "langs": Array [
                "en-US",
                "i-klingon",
              ],
              "text": "bob back at it again!",
            },
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 2,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.recordWithMedia",
          "media": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(5)",
                  },
                  "size": 4114,
                },
              },
              Object {
                "alt": "tests/image/fixtures/key-alt.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(6)",
                  },
                  "size": 12736,
                },
              },
            ],
          },
          "record": Object {
            "record": Object {
              "cid": "cids(2)",
              "uri": "record(2)",
            },
          },
        },
        "text": "hi im carol",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(6)",
      "viewer": Object {
        "like": "record(9)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "did": "user(2)",
        "handle": "carol.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(8)",
          "following": "record(7)",
          "muted": false,
        },
      },
      "cid": "cids(7)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(8)",
            "uri": "record(11)",
          },
          "root": Object {
            "cid": "cids(8)",
            "uri": "record(11)",
          },
        },
        "text": "of course",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(10)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "labels": Array [
            Object {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "neg": false,
              "src": "user(0)",
              "uri": "record(1)",
              "val": "self-label-a",
            },
            Object {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "neg": false,
              "src": "user(0)",
              "uri": "record(1)",
              "val": "self-label-b",
            },
          ],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(8)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 3,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(11)",
        "viewer": Object {},
      },
      "root": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "labels": Array [
            Object {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "neg": false,
              "src": "user(0)",
              "uri": "record(1)",
              "val": "self-label-a",
            },
            Object {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "neg": false,
              "src": "user(0)",
              "uri": "record(1)",
              "val": "self-label-b",
            },
          ],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(8)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 3,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(11)",
        "viewer": Object {},
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "did": "user(3)",
        "handle": "dan.test",
        "labels": Array [
          Object {
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "user(3)",
            "val": "repo-action-label",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "following": "record(13)",
          "muted": false,
        },
      },
      "cid": "cids(9)",
      "embed": Object {
        "$type": "app.bsky.embed.record#view",
        "record": Object {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": Object {
            "did": "user(2)",
            "handle": "carol.test",
            "labels": Array [],
            "viewer": Object {
              "blockedBy": false,
              "followedBy": "record(8)",
              "following": "record(7)",
              "muted": false,
            },
          },
          "cid": "cids(4)",
          "embeds": Array [
            Object {
              "$type": "app.bsky.embed.recordWithMedia#view",
              "media": Object {
                "$type": "app.bsky.embed.images#view",
                "images": Array [
                  Object {
                    "alt": "tests/image/fixtures/key-landscape-small.jpg",
                    "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
                    "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
                  },
                  Object {
                    "alt": "tests/image/fixtures/key-alt.jpg",
                    "fullsize": "https://pds.public.url/image/xC2No-8rKVDIwIMmCiEBm9EiGLDBBOpf36PHoGf-GDw/rs:fit:2000:2000:1:0/plain/bafkreifdklbbcdsyanjz3oqe5pf2omuq5ansthokxlbleagg3eenx62h7e@jpeg",
                    "thumb": "https://pds.public.url/image/g7yazUpNwN8LKumZ2Zmn_ptQbtMLs1Pti5-GDn7H8_8/rs:fit:1000:1000:1:0/plain/bafkreifdklbbcdsyanjz3oqe5pf2omuq5ansthokxlbleagg3eenx62h7e@jpeg",
                  },
                ],
              },
              "record": Object {
                "record": Object {
                  "$type": "app.bsky.embed.record#viewRecord",
                  "author": Object {
                    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
                    "did": "user(1)",
                    "displayName": "bobby",
                    "handle": "bob.test",
                    "labels": Array [
                      Object {
                        "cid": "cids(3)",
                        "cts": "1970-01-01T00:00:00.000Z",
                        "neg": false,
                        "src": "user(1)",
                        "uri": "record(5)",
                        "val": "self-label-a",
                      },
                      Object {
                        "cid": "cids(3)",
                        "cts": "1970-01-01T00:00:00.000Z",
                        "neg": false,
                        "src": "user(1)",
                        "uri": "record(5)",
                        "val": "self-label-b",
                      },
                    ],
                    "viewer": Object {
                      "blockedBy": false,
                      "followedBy": "record(4)",
                      "following": "record(3)",
                      "muted": false,
                    },
                  },
                  "cid": "cids(2)",
                  "indexedAt": "1970-01-01T00:00:00.000Z",
                  "labels": Array [],
                  "uri": "record(2)",
                  "value": Object {
                    "$type": "app.bsky.feed.post",
                    "createdAt": "1970-01-01T00:00:00.000Z",
                    "langs": Array [
                      "en-US",
                      "i-klingon",
                    ],
                    "text": "bob back at it again!",
                  },
                },
              },
            },
          ],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [],
          "uri": "record(6)",
          "value": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "embed": Object {
              "$type": "app.bsky.embed.recordWithMedia",
              "media": Object {
                "$type": "app.bsky.embed.images",
                "images": Array [
                  Object {
                    "alt": "tests/image/fixtures/key-landscape-small.jpg",
                    "image": Object {
                      "$type": "blob",
                      "mimeType": "image/jpeg",
                      "ref": Object {
                        "$link": "cids(5)",
                      },
                      "size": 4114,
                    },
                  },
                  Object {
                    "alt": "tests/image/fixtures/key-alt.jpg",
                    "image": Object {
                      "$type": "blob",
                      "mimeType": "image/jpeg",
                      "ref": Object {
                        "$link": "cids(6)",
                      },
                      "size": 12736,
                    },
                  },
                ],
              },
              "record": Object {
                "record": Object {
                  "cid": "cids(2)",
                  "uri": "record(2)",
                },
              },
            },
            "text": "hi im carol",
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.record",
          "record": Object {
            "cid": "cids(4)",
            "uri": "record(6)",
          },
        },
        "facets": Array [
          Object {
            "features": Array [
              Object {
                "$type": "app.bsky.richtext.facet#mention",
                "did": "user(0)",
              },
            ],
            "index": Object {
              "byteEnd": 18,
              "byteStart": 0,
            },
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "uri": "record(12)",
      "viewer": Object {},
    },
    "reason": Object {
      "$type": "app.bsky.feed.defs#reasonRepost",
      "by": Object {
        "did": "user(2)",
        "handle": "carol.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(8)",
          "following": "record(7)",
          "muted": false,
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
]
`;

exports[`feed generation getFeed resolves basic feed contents. 1`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": Array [
          Object {
            "cid": "cids(1)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(1)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [
        Object {
          "cid": "cids(0)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "user(0)",
          "uri": "record(0)",
          "val": "self-label",
        },
      ],
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "labels": Object {
          "$type": "com.atproto.label.defs#selfLabels",
          "values": Array [
            Object {
              "val": "self-label",
            },
          ],
        },
        "text": "hey there",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "did": "user(1)",
        "handle": "carol.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(4)",
          "following": "record(3)",
          "muted": false,
        },
      },
      "cid": "cids(2)",
      "embed": Object {
        "$type": "app.bsky.embed.recordWithMedia#view",
        "media": Object {
          "$type": "app.bsky.embed.images#view",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
            Object {
              "alt": "tests/image/fixtures/key-alt.jpg",
              "fullsize": "https://pds.public.url/image/xC2No-8rKVDIwIMmCiEBm9EiGLDBBOpf36PHoGf-GDw/rs:fit:2000:2000:1:0/plain/bafkreifdklbbcdsyanjz3oqe5pf2omuq5ansthokxlbleagg3eenx62h7e@jpeg",
              "thumb": "https://pds.public.url/image/g7yazUpNwN8LKumZ2Zmn_ptQbtMLs1Pti5-GDn7H8_8/rs:fit:1000:1000:1:0/plain/bafkreifdklbbcdsyanjz3oqe5pf2omuq5ansthokxlbleagg3eenx62h7e@jpeg",
            },
          ],
        },
        "record": Object {
          "record": Object {
            "$type": "app.bsky.embed.record#viewRecord",
            "author": Object {
              "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
              "did": "user(2)",
              "displayName": "bobby",
              "handle": "bob.test",
              "labels": Array [
                Object {
                  "cid": "cids(6)",
                  "cts": "1970-01-01T00:00:00.000Z",
                  "neg": false,
                  "src": "user(2)",
                  "uri": "record(8)",
                  "val": "self-label-a",
                },
                Object {
                  "cid": "cids(6)",
                  "cts": "1970-01-01T00:00:00.000Z",
                  "neg": false,
                  "src": "user(2)",
                  "uri": "record(8)",
                  "val": "self-label-b",
                },
              ],
              "viewer": Object {
                "blockedBy": false,
                "followedBy": "record(7)",
                "following": "record(6)",
                "muted": false,
              },
            },
            "cid": "cids(5)",
            "embeds": Array [],
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": Array [],
            "uri": "record(5)",
            "value": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "langs": Array [
                "en-US",
                "i-klingon",
              ],
              "text": "bob back at it again!",
            },
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 2,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.recordWithMedia",
          "media": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(3)",
                  },
                  "size": 4114,
                },
              },
              Object {
                "alt": "tests/image/fixtures/key-alt.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(4)",
                  },
                  "size": 12736,
                },
              },
            ],
          },
          "record": Object {
            "record": Object {
              "cid": "cids(5)",
              "uri": "record(5)",
            },
          },
        },
        "text": "hi im carol",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(2)",
      "viewer": Object {
        "like": "record(9)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "did": "user(1)",
        "handle": "carol.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(4)",
          "following": "record(3)",
          "muted": false,
        },
      },
      "cid": "cids(7)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(8)",
            "uri": "record(11)",
          },
          "root": Object {
            "cid": "cids(8)",
            "uri": "record(11)",
          },
        },
        "text": "of course",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(10)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "labels": Array [
            Object {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "neg": false,
              "src": "user(0)",
              "uri": "record(1)",
              "val": "self-label-a",
            },
            Object {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "neg": false,
              "src": "user(0)",
              "uri": "record(1)",
              "val": "self-label-b",
            },
          ],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(8)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 3,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(11)",
        "viewer": Object {},
      },
      "root": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "labels": Array [
            Object {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "neg": false,
              "src": "user(0)",
              "uri": "record(1)",
              "val": "self-label-a",
            },
            Object {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "neg": false,
              "src": "user(0)",
              "uri": "record(1)",
              "val": "self-label-b",
            },
          ],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(8)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 3,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(11)",
        "viewer": Object {},
      },
    },
  },
]
`;

exports[`feed generation getFeedGenerator describes a feed gen & returns online status 1`] = `
Object {
  "isOnline": true,
  "isValid": true,
  "view": Object {
    "cid": "cids(0)",
    "creator": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "did": "user(1)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [
        Object {
          "cid": "cids(1)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        Object {
          "cid": "cids(1)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": Object {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "description": "Provides all feed candidates",
    "did": "user(0)",
    "displayName": "All",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 2,
    "uri": "record(0)",
    "viewer": Object {
      "like": "record(4)",
    },
  },
}
`;

exports[`feed generation getFeedGenerators describes multiple feed gens 1`] = `
Object {
  "feeds": Array [
    Object {
      "cid": "cids(0)",
      "creator": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": Array [
          Object {
            "cid": "cids(1)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "user(1)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(1)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "user(1)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "description": "Provides all feed candidates",
      "did": "user(0)",
      "displayName": "All",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 2,
      "uri": "record(0)",
      "viewer": Object {
        "like": "record(4)",
      },
    },
    Object {
      "cid": "cids(2)",
      "creator": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": Array [
          Object {
            "cid": "cids(1)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "user(1)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(1)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "user(1)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "description": "Provides even-indexed feed candidates",
      "did": "user(0)",
      "displayName": "Even",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "likeCount": 0,
      "uri": "record(5)",
      "viewer": Object {},
    },
  ],
}
`;
